# knotpen2

./: .gitignore  MANIFEST.in  README.md  README.zh-CN.md  RELEASE_README.md  RELEASE_README.zh-CN.md  build.py  clean_history.sh  main.bat  pack_zip.sh  pyproject.toml  test_run.sh
docs/: Savings.md  algorithm-manual.md  algorithm-manual.zh-CN.md  interface-user-manual.md  interface-user-manual.zh-CN.md  packaging-guide.md  packaging-guide.zh-CN.md  storage-format.md  storage-format.zh-CN.md
knotpen2/: ClassBinder.py  GameObject.py  Knotpen2GameObject.py  MemoryObject.py  MyAlgorithm.py  __init__.py  __main__.py  constant_config.py  error_log.py  font_utils.py  i18n.py  log_error.py  math_utils.py  myxdg.py  pygame_interface.py  pygame_utils.py  svg_to_png.py  test_main.py
knotpen2/i18n/: build_pot.sh  compile_po.sh
knotpen2/i18n/locales/en_US/LC_MESSAGES/: knotpen2.mo  knotpen2.po
knotpen2/i18n/locales/zh_CN/LC_MESSAGES/: knotpen2.mo  knotpen2.po
scripts/: README.md  clean_history.sh  get_version.py  pack_zip.sh  packer_all.sh  packer_dev.sh  packer_linux.sh  packer_windows.bat  pyzip.py
