[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knotpen2"
version = "2.5.0"
description = "A GUI tool for drawing knot and link diagrams and calculating PD_CODE output."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Guannan Guo" },
]
keywords = ["knot", "link", "pd-code", "pygame", "mathematics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
    "pygame>=2.6",
]

[project.urls]
Homepage = "https://github.com/GGN-2015/knotpen2"
Repository = "https://github.com/GGN-2015/knotpen2"
Issues = "https://github.com/GGN-2015/knotpen2/issues"

[project.scripts]
knotpen2 = "knotpen2.test_main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["knotpen2*"]

[tool.setuptools.package-data]
knotpen2 = [
    "logo.ico",
    "i18n/locales/*/LC_MESSAGES/*.po",
    "i18n/locales/*/LC_MESSAGES/*.mo",
]
